Header: Replace button my.tanaguru.com by buttons signin and signup

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -20,7 +20,7 @@
     ul {padding: 0;}       
 }
 
-#button_my_tanaguru {
+/*#button_my_tanaguru {
     .linear-vertical-gradient (@vertical-gradient-red-start; @vertical-gradient-red-end);
     .my-font-size(14); //14px
     color: @button-color;
@@ -82,7 +82,144 @@
               background-color: #fff; 
               z-index: 3;
     }
+}*/
+
+#button_signup {
+    .linear-vertical-gradient (@vertical-gradient-red-start; @vertical-gradient-red-end);
+    .my-font-size(14); //14px
+    color: @button-color;
+    font-family: montserrat;
+    font-weight: normal;
+    padding: 0 2rem 0.5rem 2rem;
+    border-radius: 0 0 10px 10px;
+    border-bottom: 1px solid #D61119;
+    float: right;
+    position: relative;
+
+    content:"";
+    z-index: 1;
+    &:before { //square on the left
+               content:"";
+               position: absolute;
+               width: 10px;
+               height: 10px;
+               left: -10px;
+               background-color: @vertical-gradient-red-start;
+               z-index: 2;
+    }
+    &:after { //square on the right
+              content:"";
+              position: absolute;
+              width: 10px;
+              height: 10px;
+              right: -10px;
+              background-color: @vertical-gradient-red-start;
+              z-index: 2;
+    } 
 }
+
+#signup {
+    position: relative;
+    float: right;
+    
+    &:before { //circular mask on the right
+               content:"";
+               position: absolute;
+               width: 20px; 
+               height: 20px;
+               left:-20px;
+               -webkit-border-radius: 10px;
+               -moz-border-radius:    10px;
+               border-radius:         10px;
+               background-color: #fff;
+               z-index: 3;
+    }
+    &:after { //circular mask on the left
+              content:"";
+              position: absolute;  
+              width: 20px; 
+              height: 20px;
+              right:-20px;
+              -webkit-border-radius: 10px;
+              -moz-border-radius:    10px;
+              border-radius:         10px;
+              background-color: #fff; 
+              z-index: 3;
+    }
+}
+
+#button_signin {
+    margin-right: 20px;
+    a {color: #4D4D4D;}
+    background-color: #fff;
+    .my-font-size(14); //14px
+    font-family: montserrat;
+    font-weight: normal;
+    padding: 0.3rem 2.5rem 0.2rem;
+    border-radius: 0 0 10px 0;
+    border-bottom: 1px solid #E06767;
+    float: right;
+    position: relative;
+
+    content:"";
+    z-index: 0;
+    &:before { //square on the left
+               background-color: #FFFFFF;
+               border-bottom: 1px solid #E06767;
+               content: "";
+               height: 23px;
+               left: -10px;
+               position: absolute;
+               width: 10px;
+               z-index: 2;
+    }
+    
+    &:after { //square on the right
+              background-color: rgba(0, 0, 0, 0);
+              border-left: 1px solid #E06767;
+              border-radius: 11px 0 0;
+              content: "";
+              height: 23px;
+              position: absolute;
+              right: -19px;
+              top: -1px;
+              transform: scale(0.999);
+              width: 20px;
+              z-index: 2;
+    } 
+}
+
+#signin {
+    position: relative;
+    float: right;
+    a {color: #4D4D4D;}
+
+/*    &:before { //circular mask on the right
+               content:"";
+               position: absolute;
+               width: 20px; 
+               height: 20px;
+               left:-20px;
+               -webkit-border-radius: 10px;
+               -moz-border-radius:    10px;
+               border-radius:         10px;
+               background-color: #fff;
+               z-index: 3;
+    }*/
+/*    &:after { //circular mask on the left
+              content:"";
+              position: absolute;  
+              width: 20px; 
+              height: 20px;
+              right:-20px;
+              -webkit-border-radius: 10px;
+              -moz-border-radius:    10px;
+              border-radius:         10px;
+              background-color: #fff; 
+              z-index: 3;
+    }*/
+}
+
 
 #logo {
     float: left;
@@ -122,7 +259,6 @@
         text-decoration: underline;
     }
 }
-
 /**
  * Footer 
  * -----------------------------------------------------------------------------
