header: lighter border for button signin

--- a/twentythirteen-www-tg/Less/bits.less
+++ b/twentythirteen-www-tg/Less/bits.less
@@ -4,6 +4,8 @@
 @vertical-gradient-red-start: #EF3B42;
 @vertical-gradient-red-end:   #D61119;
 
+@red-border: 1px solid rgba(224, 103, 103, 0.15);
+
 
 // blue for gradient
 @gradient-blue-start: #00d9f0;
