copie de la feuille de style du thème parent dans un .less
une synchro doit être mise en place via Rsync
pour récupérer les mises à jour du fichier

URL fichier source :
/wp-content/themes/twentythirteen/style.css

Path fichier destination :
/twentythirteen-www-tg/Less/theme-parent.less

--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -1,4 +1,5 @@
-@import url("../twentythirteen/style.css");
+
+@import "Less/theme-parent.less";
 
 @import "Less/bits.less";
 @import "Less/mixins.less";
