restored @import of parent theme because Less doesn't understand multiline CSS comments

--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -1,5 +1,4 @@
-
-@import "Less/theme-parent.less";
+@import url("../twentythirteen/style.css");
 
 @import "Less/bits.less";
 @import "Less/mixins.less";
