remove text justify and hyphenating properties

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -315,7 +315,6 @@
 
     li {
         display: inline-block;
-        min-height: 220px;
         vertical-align: top;
     }
 
@@ -668,7 +667,6 @@ abbr[title], abbr[data-original-title] {
             margin-bottom: 50px; 
             position:relative;
 
-
             &:before {
                 border-color: #FFFFFF #FFFFFF #FFFFFF rgba(0, 0, 0, 0);
                 border-style: solid;
@@ -697,23 +695,24 @@ abbr[title], abbr[data-original-title] {
     }
 
     #why1 {
-        min-height: 270px;
-        width : 315px;  
+        min-height: 300px;
+        width : 345px;  
+        vertical-align: middle;
         background-color: white;
         box-shadow: inset -3px 0 4px -4px #000; /* inset -2px -0px 20px -10px #000; */
     }
     #why2 {
-        min-height: 310px;
-        width : 325px;
-        vertical-align: 15px;
+        min-height: 330px;
+        width : 345px;
+        vertical-align: middle;
         background-color: white;
     }
     #why3 {
-        min-height: 270px;
-        width : 315px;    
+        min-height: 300px;
+        width : 345px;
+        vertical-align: middle;
         background-color: white;
         box-shadow : inset 3px 0px 4px -4px #000; /*  inset 1px 0 20px -10px #000;*/
-        vertical-align: 10px;
     }
 
     #step1{
