CSS sprites (should) be OK

--- a/twentythirteen-www-tg/Less/bits.less
+++ b/twentythirteen-www-tg/Less/bits.less
@@ -28,7 +28,7 @@
 @img1url-why : url(Images/Background/why_line.png); 
 @img1repeat-why : no-repeat; 
 @img1pos-why : top center;
-@img2url-why : url(Images/Background/why_line_repeat.png);  ; 
+@img2url-why : url(Images/Background/why_line_repeat.png);  
 @img2repeat-why : repeat-x; 
 @img2pos-why : top; 
 @img3url-why : url(Images/Background/why_mountains.png); 
