Sprites: now a repeatable process

--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -4,4 +4,4 @@
 @import "Less/mixins.less";
 @import "Less/fonts.less";
 @import "Less/global.less";
-@import "Less/Sprite.less";
+@import "Front-page.less";
