--- a/twentythirteen-www-tg/Front-page.less
+++ b/twentythirteen-www-tg/Front-page.less
@@ -1,65 +1,66 @@
-﻿/* glue: 0.9.4 hash: abdf88a5f5 */
-.sprite-machine,.sprite-step4,.sprite-step3,.sprite-step2,.sprite-step1,.sprite-data,.sprite-gears,.sprite-flipflops,.sprite-chevron{
-    background-image:url('Images/Sprite.png');
+﻿/* glue: 0.9.4 hash: 2e9c9599cd */
+.sprite-Front-page-machine,.sprite-Front-page-step4,.sprite-Front-page-step3,.sprite-Front-page-step2,.sprite-Front-page-step1,.sprite-Front-page-data,.sprite-Front-page-gears,.sprite-Front-page-flipflops,.sprite-Front-page-chevron{
+    background-image:url('Images/Front-page.png');
     background-repeat:no-repeat;
     -webkit-background-size: 952px 509px;
     -moz-background-size: 952px 509px;
     background-size: 952px 509px;
+    
     @media screen and (-webkit-min-device-pixel-ratio: 1.0), screen and (min--moz-device-pixel-ratio: 1.0),screen and (-o-min-device-pixel-ratio: 100/100),screen and (min-device-pixel-ratio: 1.0),screen and (min-resolution: 1.0dppx){
-        background-image:url('Images/Sprite.png');
+        background-image:url('Images/Front-page.png');
     }
     
 }
 
-.sprite-machine{
+.sprite-Front-page-machine{
     background-position:0 0;
     width:952px;
     height:260px;
 }
 
-.sprite-step4{
+.sprite-Front-page-step4{
     background-position:0 -260px;
     width:152px;
     height:161px;
 }
 
-.sprite-step3{
+.sprite-Front-page-step3{
     background-position:-152px -260px;
     width:152px;
     height:161px;
 }
 
-.sprite-step2{
+.sprite-Front-page-step2{
     background-position:-304px -260px;
     width:152px;
     height:161px;
 }
 
-.sprite-step1{
+.sprite-Front-page-step1{
     background-position:-456px -260px;
     width:152px;
     height:161px;
 }
 
-.sprite-data{
+.sprite-Front-page-data{
     background-position:-608px -260px;
     width:93px;
     height:80px;
 }
 
-.sprite-gears{
+.sprite-Front-page-gears{
     background-position:0 -421px;
     width:76px;
     height:88px;
 }
 
-.sprite-flipflops{
+.sprite-Front-page-flipflops{
     background-position:-701px -260px;
     width:60px;
     height:70px;
 }
 
-.sprite-chevron{
+.sprite-Front-page-chevron{
     background-position:-761px -260px;
     width:20px;
     height:31px;
