added lossy-compressed images (but no difference seen actually)

--- a/twentythirteen-www-tg/Front-page.less
+++ b/twentythirteen-www-tg/Front-page.less
@@ -1,10 +1,10 @@
-﻿/* glue: 0.9.4 hash: 2e9c9599cd */
-.sprite-Front-page-machine,.sprite-Front-page-step4,.sprite-Front-page-step3,.sprite-Front-page-step2,.sprite-Front-page-step1,.sprite-Front-page-data,.sprite-Front-page-gears,.sprite-Front-page-flipflops,.sprite-Front-page-chevron{
+﻿/* glue: 0.9.4 hash: 6f4c7acad1 */
+.sprite-Front-page-step4,.sprite-Front-page-step3,.sprite-Front-page-step2,.sprite-Front-page-step1,.sprite-Front-page-data,.sprite-Front-page-gears,.sprite-Front-page-flipflops,.sprite-Front-page-chevron{
     background-image:url('Images/Front-page.png');
     background-repeat:no-repeat;
-    -webkit-background-size: 952px 509px;
-    -moz-background-size: 952px 509px;
-    background-size: 952px 509px;
+    -webkit-background-size: 456px 410px;
+    -moz-background-size: 456px 410px;
+    background-size: 456px 410px;
     
     @media screen and (-webkit-min-device-pixel-ratio: 1.0), screen and (min--moz-device-pixel-ratio: 1.0),screen and (-o-min-device-pixel-ratio: 100/100),screen and (min-device-pixel-ratio: 1.0),screen and (min-resolution: 1.0dppx){
         background-image:url('Images/Front-page.png');
@@ -12,56 +12,50 @@
     
 }
 
-.sprite-Front-page-machine{
-    background-position:0 0;
-    width:952px;
-    height:260px;
-}
-
 .sprite-Front-page-step4{
-    background-position:0 -260px;
+    background-position:0 0;
     width:152px;
     height:161px;
 }
 
 .sprite-Front-page-step3{
-    background-position:-152px -260px;
+    background-position:-152px 0;
     width:152px;
     height:161px;
 }
 
 .sprite-Front-page-step2{
-    background-position:-304px -260px;
+    background-position:-304px 0;
     width:152px;
     height:161px;
 }
 
 .sprite-Front-page-step1{
-    background-position:-456px -260px;
+    background-position:0 -161px;
     width:152px;
     height:161px;
 }
 
 .sprite-Front-page-data{
-    background-position:-608px -260px;
+    background-position:-152px -161px;
     width:93px;
     height:80px;
 }
 
 .sprite-Front-page-gears{
-    background-position:0 -421px;
+    background-position:0 -322px;
     width:76px;
     height:88px;
 }
 
 .sprite-Front-page-flipflops{
-    background-position:-701px -260px;
+    background-position:-245px -161px;
     width:60px;
     height:70px;
 }
 
 .sprite-Front-page-chevron{
-    background-position:-761px -260px;
+    background-position:-305px -161px;
     width:20px;
     height:31px;
 }
