commented out unused fonts

--- a/twentythirteen-www-tg/Less/fonts.less
+++ b/twentythirteen-www-tg/Less/fonts.less
@@ -30,6 +30,26 @@
 // Open Sans Extrabold  --> font-weight: 900
 @font-face {
     font-family: 'open_sans';
+    src: url('Fonts/opensans-regular-webfont.eot');
+    src: url('Fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Fonts/opensans-regular-webfont.woff') format('woff'),
+         url('Fonts/opensans-regular-webfont.ttf') format('truetype'),
+         url('Fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'open_sans';
+    src: url('Fonts/opensans-light-webfont.eot');
+    src: url('Fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Fonts/opensans-light-webfont.woff') format('woff'),
+         url('Fonts/opensans-light-webfont.ttf') format('truetype'),
+         url('Fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'open_sans';
     src: url('Fonts/opensans-bold-webfont.eot');
     src: url('Fonts/opensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
          url('Fonts/opensans-bold-webfont.woff') format('woff'),
@@ -38,7 +58,7 @@
     font-weight: bold;
     font-style: normal;
 }
-@font-face {
+/*@font-face {
     font-family: 'open_sans';
     src: url('Fonts/opensans-bolditalic-webfont.eot');
     src: url('Fonts/opensans-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
@@ -80,16 +100,6 @@
 }
 @font-face {
     font-family: 'open_sans';
-    src: url('Fonts/opensans-light-webfont.eot');
-    src: url('Fonts/opensans-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Fonts/opensans-light-webfont.woff') format('woff'),
-         url('Fonts/opensans-light-webfont.ttf') format('truetype'),
-         url('Fonts/opensans-light-webfont.svg#open_sanslight') format('svg');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'open_sans';
     src: url('Fonts/opensans-lightitalic-webfont.eot');
     src: url('Fonts/opensans-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
          url('Fonts/opensans-lightitalic-webfont.woff') format('woff'),
@@ -97,16 +107,6 @@
          url('Fonts/opensans-lightitalic-webfont.svg#open_sanslight_italic') format('svg');
     font-weight: 300;
     font-style: italic;
-}
-@font-face {
-    font-family: 'open_sans';
-    src: url('Fonts/opensans-regular-webfont.eot');
-    src: url('Fonts/opensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Fonts/opensans-regular-webfont.woff') format('woff'),
-         url('Fonts/opensans-regular-webfont.ttf') format('truetype'),
-         url('Fonts/opensans-regular-webfont.svg#open_sansregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
 }
 @font-face {
     font-family: 'open_sans';
@@ -127,7 +127,7 @@
          url('Fonts/opensans-semibolditalic-webfont.svg#open_sanssemibold_italic') format('svg');
     font-weight: 600;
     font-style: italic;
-}
+}*/
 
 // -----------------------------------------------------------------------------
 // Utilisation
