new CSS for Contact page (with sprites)

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -531,6 +531,11 @@ abbr[title], abbr[data-original-title] {
         .my-line-height(21);
         color: #4d4d4d;
         margin: 15px 0 15px 0;
+        span {
+            .my-font-size(14);
+            .my-line-height(18);
+            font-weight: normal;
+        }
     }
     article {
         .my-font-size(17);
@@ -545,6 +550,8 @@ abbr[title], abbr[data-original-title] {
     ul {padding-left:20px;}
 
     a {color:#666;}
+    
+    .portrait {float:right;}
 }
 .twitter_bullet {list-style-image: url(Images/Social/twitter_bullet.png);}
 
