--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -550,8 +550,11 @@ abbr[title], abbr[data-original-title] {
     ul {padding-left:20px;}
 
     a {color:#666;}
-    
-    .portrait {float:right;}
+
+    .portrait {
+        float: left;
+        margin: 0 10px 0 0;
+    }
 }
 .twitter_bullet {list-style-image: url(Images/Social/twitter_bullet.png);}
 
@@ -733,7 +736,7 @@ abbr[title], abbr[data-original-title] {
     }
 
     .sprite-steps {margin-bottom: 60px;}
-    
+
     #step1{
         width : 180px; //180
         margin: 0 0 0 0;
@@ -757,7 +760,7 @@ abbr[title], abbr[data-original-title] {
         background-repeat: no-repeat, no-repeat, repeat-x;
         background-position: center 59%, bottom center, bottom;
         padding: 12rem 0 20rem 0;
-        
+
         li {display:inline-block;}
 
     }
