--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -9,6 +9,10 @@
 
 a {text-decoration: underline;}
 
+.main-navigation {
+    min-height: inherit;
+}
+
 /**
  * Header
  * -----------------------------------------------------------------------------
@@ -21,13 +25,13 @@ a {text-decoration: underline;}
 #masthead {
     min-height: 9.5rem;
     margin : auto;
-    
+
     p {margin: 0 20px 0 0;
        a {color: @button-color;}
     }
-    
+
     ul {padding: 0;}       
-    
+
     a {
         text-decoration: none;
         &:hover {text-decoration: underline;}
@@ -172,15 +176,47 @@ a {text-decoration: underline;}
         font-family: montserrat;
         font-weight: normal;
         color: #4d4d4d;
-        padding: 10px;
+        padding: 10px 0px 3px 10px;
     }
 
-    li a:hover
-        {
+    li a:hover {
         background-color: transparent;
         text-decoration: underline;
     }
 }
+
+#nav2 {
+    float: right;
+    text-align: right;
+    width: 70%;
+
+    li a { 
+        .my-font-size(13); //13px
+        font-weight: 300;
+        color: #4d4d4d;
+        padding: 5px 0px 5px 5px;
+    }
+
+    aside {
+        float:right;
+        margin: 0;
+    }
+
+    .widget {
+        background-color: inherit;
+        padding: 0 0 5px
+    }
+    
+    .widget_polylang {
+        padding-left: 5px;
+    }
+    
+    .widget_nav_menu li {
+        display: inline-block;
+    }
+}
+
+
 
 /**
  * Footer 
