--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -541,6 +541,7 @@ body.home a {
         display: inline-block;
         vertical-align: top;
         padding : 10px 40px;
+        max-width : 540px;
 
         a {color:#666;}
         dd {.my-line-height(23);}
@@ -551,11 +552,11 @@ body.home a {
     border-right: 0.1px solid #D1D1D1;
     input, 
     select, 
-    textarea {width: 85%;}
+    textarea {width: 90%;}
 }
 
 div.wpcf7-validation-errors {
-    width : 390px;
+    width : 90%;
     border: 2px solid #E60000;
 }
 
@@ -891,7 +892,9 @@ abbr[title], abbr[data-original-title] {
         width : 70%;
     }   
 }
-@media (max-width: 643px) { text-align: left;}
+@media (max-width: 643px) {
+    text-align: left;
+}
 
 @media (min-width: 480px) {
     #button_simply {width: 325px;}
@@ -907,4 +910,4 @@ abbr[title], abbr[data-original-title] {
     }
     #contact {padding: 10px 10px;}
     #contact_form {border-right: none;}
-}
+}  
