CSS / LESS refactor

--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -4,4 +4,10 @@
 @import "Less/mixins.less";
 @import "Less/fonts.less";
 @import "Less/global.less";
+
+@import "Less/page-Front-page.less";
+@import "Less/page.less";
+@import "Less/page-Contact.less";
+
+// Sprites: fichier .less généré par Glue
 @import "Front-page.less";
