added systematic line-height to each font-size ; added comments to structure global.less

--- a/twentythirteen-www-tg/Less/page-Front-page.less
+++ b/twentythirteen-www-tg/Less/page-Front-page.less
@@ -39,18 +39,20 @@ body.home a {
 
     h2 {
         .my-font-size(38); //38px
+        .my-line-height(49.4); //49.4px
         color: #4d4d4d;    
     }
 
     p {
         .my-font-size(20); //20px
-        .my-line-height(20); //25px
+        .my-line-height(20); //20px
         font-weight: 300; /* Open_Sans light */
     }
 }
 
 #button_simply {
     .my-font-size(30); //30px
+    .my-line-height(45); //45px
     font-weight:bold;
 
     padding: 10px 20px 6px;
@@ -67,6 +69,7 @@ body.home a {
     padding: 10px 20px 0;
     h2 {  
         .my-font-size(43); //43px
+        .my-line-height(56); //56px
         color: #4d4d4d;
     }
 
@@ -86,12 +89,14 @@ body.home a {
 
     h2 {
         .my-font-size(28); //28px
+        .my-line-height(36.4); //36.4px
         color: #4d4d4d;
         margin-bottom: 70px;
     }
 
     h3{
         .my-font-size(23); //23px
+        .my-line-height(30); //30px
         color: #666;
         margin-top: 0;
         margin-bottom: 10px;
@@ -119,6 +124,7 @@ body.home a {
 
 #button_technology {
     .my-font-size(20); //20px
+    .my-line-height(26); //26px
     font-weight:bold;
     padding: 10px 20px 6px;
 }
@@ -129,12 +135,14 @@ body.home a {
 
     h2 {  
         .my-font-size(28); //28px
+        .my-line-height(36.4); //36.4px
         color: #4d4d4d;
         background: white;
     }
 
     h3{
         .my-font-size(23); //23px      
+        .my-line-height(30); //30px
         color: #666;
         margin-bottom: 5px;
     }
@@ -214,6 +222,7 @@ body.home a {
 #button_evaluate {
     font-weight:bold;
     .my-font-size(26); //26px
+    .my-line-height(39); //39px
     padding: 10px 20px 6px;
 }
 
@@ -431,11 +440,16 @@ body.home a {
     #accessibility_simply {
         .radial-gradient (@gradient-blue-start; @gradient-blue-end);
         padding: 2rem;
-        h2 {.my-font-size(32);}
+        
+        h2 {
+            .my-font-size(32); //32px
+            .my-line-height(49); //49px
+        }
     }
 
-    #accessibility_fast {
-        h2 {.my-font-size(35);} 
+    #accessibility_fast h2 {
+        .my-font-size(35);
+        .my-line-height(56); //56px
     }
 
     #button_simply {margin-top: 2.5rem;}
