--- a/twentythirteen-www-tg/Less/page-Contact.less
+++ b/twentythirteen-www-tg/Less/page-Contact.less
@@ -7,25 +7,14 @@
     background-color: #FAFAFA;
 }
 
-/*#page_title_gradient {.radial-gradient (@gradient-blue-start; @gradient-blue-end);}*/
-
-#page_title {
-    padding: 15px 10px 15px 10px;
-    max-width: 960px;
-    margin: auto;
-    h1 {
-        .my-font-size(25);
-        color: #4d4d4d;
-    }
-}
 
 #contact_area {
     max-width: 960px;
     margin: auto;
 
     article {
-        .my-font-size(18);
-        .my-line-height(29);
+        .my-font-size(18); // 18px
+        .my-line-height(29); // 29px
         color: #666;
         display: inline-block;
         vertical-align: top;
@@ -62,7 +51,8 @@ abbr[title], abbr[data-original-title] {
 }
 
 #form_button {
-    .my-font-size(20);
+    .my-font-size(20); //20px
+    .my-line-height(25); // 25px
     .linear-gradient (@gradient-red-start; @gradient-red-end);
     //.linear-gradient (rgba(0,0,0,0); rgba(0,0,0,0.05)); //@@@TODO
     font-family: montserrat;
