refactored font-size/line-height to added default values

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -249,8 +249,8 @@ a {text-decoration: underline;}
  */
 
 #main {
-    //.my-font-size(18); // 18px
-    //.my-line-height(29); // 29px
+    .my-font-size(18); // 18px
+    .my-line-height(29); // 29px
 }
 
 .hentry {
