--- a/twentythirteen-www-tg/Less/page-Contact.less
+++ b/twentythirteen-www-tg/Less/page-Contact.less
@@ -68,6 +68,9 @@ abbr[title], abbr[data-original-title] {
     max-width: 960px;
     margin: auto;
     padding: 30px 0 0 0;
+    .my-font-size(10); //10px
+    .my-line-height(15); //15px
+    
     h2 {
         .my-font-size(21);
         .my-line-height(21);
