--- a/twentythirteen-www-tg/Less/page-Front-page.less
+++ b/twentythirteen-www-tg/Less/page-Front-page.less
@@ -22,6 +22,11 @@ body.home a {
     margin-right: auto;
 }
 
+#everest {
+    .my-font-size(10); //10px
+    .my-line-height(15); //15px    
+}
+
 #everest_gradient {.radial-gradient (@gradient-blue-start; @gradient-blue-end);}
 
 #accessibility_simply {
@@ -440,7 +445,7 @@ body.home a {
     #accessibility_simply {
         .radial-gradient (@gradient-blue-start; @gradient-blue-end);
         padding: 2rem;
-        
+
         h2 {
             .my-font-size(32); //32px
             .my-line-height(49); //49px
