defined default layout for page

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -257,13 +257,12 @@ a {text-decoration: underline;}
     padding: 0;
 }
 
-.entry-header,
 .entry-content,
 .entry-summary,
 .entry-meta {
-    max-width: none;
+    max-width: 960px;
+    padding: 0 10px;
 }
-
 
 
 /**
@@ -273,6 +272,7 @@ a {text-decoration: underline;}
 
 .entry-header {
     margin: 0;
+    max-width: none;
 }
 
 /**
