Converted images into Data-URI

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -374,7 +374,7 @@ footer a:hover {text-decoration: underline;}
 .widget li {padding:0;}
 
 #footer-tg li:before,
-#footer-and-also li:before {content: url(Images/chevron_small.png);}
+#footer-and-also li:before {content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAALCAYAAACzkJeoAAAAVElEQVR42mL4//9/IBCvAmJmBiQA5IOJi/8hYAI2SVUgfg1VUIAiCWVYAfE3IP4LxMEoklBOMFTyG1QxAwOaPaugxl8jTidOO/G6lpA/cYYQQIABAKbNraSJDbzuAAAAAElFTkSuQmCC)}
 #footer-social img {margin: 0 0 20px 15px;}
 #footer-social a {display: inline-block;}
 
