included style.css from parent theme into style.less (saving 1 more  HTTP request)

--- a/twentythirteen-www-tg/style.less
+++ b/twentythirteen-www-tg/style.less
@@ -1,5 +1,6 @@
-@import url("../twentythirteen/style.css");
+//@import url("../twentythirteen/style.css");
 
+@import "Less/style.less"; // Style.css du thème parent
 @import "Less/bits.less";
 @import "Less/mixins.less";
 @import "Less/fonts.less";
