--- a/twentythirteen-www-tg/Less/page-Contact.less
+++ b/twentythirteen-www-tg/Less/page-Contact.less
@@ -11,19 +11,18 @@
 #contact_area {
     max-width: 960px;
     margin: auto;
+}
 
-    article {
-        .my-font-size(18); // 18px
-        .my-line-height(29); // 29px
-        color: @grey-lighter;
-        display: inline-block;
-        vertical-align: top;
-        padding : 10px 40px;
-        max-width : 540px;
-
-        a {color:@grey-lighter;}
-        dd {.my-line-height(23);}
-    }
+.contact_sub {
+    .my-font-size(18); // 18px
+    .my-line-height(29); // 29px
+    color: @grey-lighter;
+    display: inline-block;
+    vertical-align: top;
+    padding : 10px 40px;
+    max-width : 540px;
+    a {color:@grey-lighter;}
+    dd {.my-line-height(23);}
 }
 
 #contact_form {
