--- a/twentythirteen-www-tg/Less/page.less
+++ b/twentythirteen-www-tg/Less/page.less
@@ -1,13 +1,62 @@
-/*#page_title_gradient {.radial-gradient (@gradient-blue-start; @gradient-blue-end);}*/
+#page_title_gradient {
+    min-height: 125px;
+    .radial-gradient (@gradient-blue-start; @gradient-blue-end);
+
+}
+
+#page_title_filter {
+    display: inline-block;
+    position: relative;
+    vertical-align: -8px;
+    border-bottom: 125px solid rgba(255, 255, 255, 0.3);
+    border-left: 0 solid rgba(0, 0, 0, 0);
+    border-right: 72px solid rgba(0, 0, 0, 0);
+    height: 0;
+    width: 41%;
+    transform: scale(0.999);
+}
 
 #page_title {
-    padding: 15px 10px 15px 10px;
-    max-width: 960px;
-    margin: auto;
+    display: inline-block;
+    position: relative;
+    vertical-align : 47px;
+/*    margin : 10px 10px ;
+    padding : 10px 15px;*/
+            margin : 0 0 0 -20px;
+        padding : 10px 25px 10px 2px;
     
+    background-color: #fff;
+    border-radius: 0 3px 3px 0;
+        &:before {
+            content: "";
+            border-left: 32px solid rgba(0, 0, 0, 0);
+            border-top: 53px solid #FFFFFF;
+            width: 2px; 
+            height: 0;
+            position: absolute;
+            top: 0;
+            left: -33px;
+            transform: scale(0.999);
+        }
+
     h1 {
         .my-font-size(25);
         .my-line-height(32.5); //32.5px
+        font-weight: bold;
         color: #4d4d4d;
+        margin : 0 0 0 0;
     }
+}
+
+@media screen and (max-width: 360px) {
+    #page_title {
+        position: absolute;
+        top : 35px;
+        left : 0px;
+        margin :0;
+        padding: 10px;
+/*width: 140px;*/
+                 
+    }
+    #page_title_gradient {position : relative;}
 }
